--- a/_pages/book/kotlin-in-action/index.html
+++ b/_pages/book/kotlin-in-action/index.html
@@ -1,14 +1,14 @@
 --- 
 layout: archive
 comments: false
-permalink: /book/kubernetes-basic/
-title: "쿠버네티스 기초다지기"
+permalink: /book/kotlin-in-action/
+title: "Kotlin in Action"
 
 sidebar:
   nav: "book"
 ---
 {% for post in site.posts %}
-{% if post.category contains "book/kubernetes-basic" %}
+{% if post.category contains "book/kotlin-in-action" %}
 <div class="list__item">
   <h2 class="archive__item-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
   <p class="page__meta">
